# skala_nhf

./: .gitignore  README.md  points.csv
.github/workflow/: cicd.yaml
.github/workflows/: cicd.yaml
src/: definitions.json  docker-compose.yaml  orders-report-job.yaml  rabbitmq.conf  starting_scritp.sh
src/chef/: Dockerfile  go.mod  main.go
src/menu/: .env  Cargo.toml  Dockerfile
src/menu/src/: main.rs
src/restaurant/: Chart.yaml  values.yaml
src/restaurant/templates/: chef-deploy.yaml  configmap.yaml  menu-deploy.yaml  menu-svc.yaml  orders-report-job.yaml  postgres-deploy.yaml  postgres-pvc.yaml  postgres-svc.yaml  rabbitmq-deploy.yaml  rabbitmq-svc.yaml  secret.yaml  waiter-deploy.yaml  waiter-svc.yaml
src/waiter/: .env  Dockerfile  go.mod  go.sum  main.go
